--- a/Stafra/Stafra.vcxproj
+++ b/Stafra/Stafra.vcxproj
@@ -166,13 +166,14 @@
     <ClCompile Include="App\Renderer.cpp" />
     <ClCompile Include="App\WindowApp.cpp" />
     <ClCompile Include="Computing\BoardLoader.cpp" />
+    <ClCompile Include="Computing\Boards.cpp" />
     <ClCompile Include="Computing\BoardSaver.cpp" />
     <ClCompile Include="Computing\ClickRules.cpp" />
+    <ClCompile Include="Computing\DefaultBoards.cpp" />
     <ClCompile Include="Computing\Downscaler.cpp" />
     <ClCompile Include="Computing\EqualityChecker.cpp" />
     <ClCompile Include="Computing\FinalTransform.cpp" />
     <ClCompile Include="Computing\FractalGen.cpp" />
-    <ClCompile Include="Computing\InitialStates.cpp" />
     <ClCompile Include="Computing\StabilityCalculator.cpp" />
     <ClCompile Include="FileMgmt\FileHandle.cpp" />
     <ClCompile Include="FileMgmt\PNGOpener.cpp" />
@@ -187,13 +188,14 @@
     <ClInclude Include="App\Renderer.hpp" />
     <ClInclude Include="App\WindowApp.hpp" />
     <ClInclude Include="Computing\BoardLoader.hpp" />
+    <ClInclude Include="Computing\Boards.hpp" />
     <ClInclude Include="Computing\BoardSaver.hpp" />
     <ClInclude Include="Computing\ClickRules.hpp" />
+    <ClInclude Include="Computing\DefaultBoards.hpp" />
     <ClInclude Include="Computing\Downscaler.hpp" />
     <ClInclude Include="Computing\EqualityChecker.hpp" />
     <ClInclude Include="Computing\FinalTransform.hpp" />
     <ClInclude Include="Computing\FractalGen.hpp" />
-    <ClInclude Include="Computing\InitialStates.hpp" />
     <ClInclude Include="Computing\StabilityCalculator.hpp" />
     <ClInclude Include="FileMgmt\FileHandle.hpp" />
     <ClInclude Include="FileMgmt\PNGOpener.hpp" />
