Character limit fix

--- a/Stafra/Stafra.vcxproj
+++ b/Stafra/Stafra.vcxproj
@@ -197,7 +197,7 @@
     <ClInclude Include="App\FileDialog.hpp" />
     <ClInclude Include="App\Renderer.hpp" />
     <ClInclude Include="App\WindowApp.hpp" />
-    <ClInclude Include="App\WindowLogger.h" />
+    <ClInclude Include="App\WindowLogger.hpp" />
     <ClInclude Include="Computing\BoardLoader.hpp" />
     <ClInclude Include="Computing\Boards.hpp" />
     <ClInclude Include="Computing\BoardSaver.hpp" />
